tests/sema/fail/v18_fail_adt_common_field_missing.ep
# COMPILE_FAIL_CONTAINS: type Node has no common field meta
type Meta {
    line: i64
}
type Leaf {
    meta: Meta
    value: i64
}
type Pair {
    value: i64
}
type Node = Leaf | Pair
fun run(): i64 {
    let m = new Meta { line: 1 }
    let n: Node = new Node(new Leaf { meta: m, value: 1 })
    ret n.meta.line
}

fun main(): void {
    exit(run())
}
